<?xml version="1.0" encoding="utf-8"?><!--
	Copyright (c) 2016 Motorola Mobility, LLC.
	All rights reserved.

	Redistribution and use in source and binary forms, with or without
	modification, are permitted provided that the following conditions are met:
	1. Redistributions of source code must retain the above copyright notice,
	this list of conditions and the following disclaimer.
	2. Redistributions in binary form must reproduce the above copyright notice,
	this list of conditions and the following disclaimer in the documentation
	and/or other materials provided with the distribution.
	3. Neither the name of the copyright holder nor the names of its
	contributors may be used to endorse or promote products derived from this
	software without specific prior written permission.

	THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
	AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
	THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
	PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
	CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
	EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
	PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
	OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
	WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
	OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
	ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_vertical_margin"
    android:layout_marginLeft="@dimen/card_horizontal_margin"
    android:layout_marginRight="@dimen/card_horizontal_margin"
    android:layout_marginTop="@dimen/card_vertical_margin"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation"
    card_view:cardUseCompatPadding="false"
    card_view:contentPadding="@dimen/widgets_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/icon_margin"
            android:src="@drawable/ic_mod_display"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/icon_title_margin"
            android:orientation="vertical"
            android:paddingLeft="@dimen/widgets_horizontal_margin"
            android:paddingRight="@dimen/widgets_horizontal_margin">

            <Switch
                android:id="@+id/display_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/icon_title_margin"
                android:layout_weight="1"
                android:text="@string/mod_display"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/tertiary_text_dark"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/layout_vertical_margin"
                android:background="?android:dividerHorizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/attach_pcard"
                android:id="@+id/switch_reason"
                android:layout_weight="1"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_vertical_margin"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/status_camera"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:enabled="false"
                    android:minHeight="@dimen/button_min_height"
                    android:paddingLeft="@dimen/widgets_horizontal_margin"
                    android:paddingRight="@dimen/widgets_horizontal_margin"
                    android:text="@string/status_camera"
                    android:textColor="@drawable/button_text_color" />

                <Button
                    android:id="@+id/status_clock"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/widgets_horizontal_margin"
                    android:background="@drawable/button_background"
                    android:enabled="false"
                    android:minHeight="@dimen/button_min_height"

                    android:paddingLeft="@dimen/widgets_horizontal_margin"
                    android:paddingRight="@dimen/widgets_horizontal_margin"
                    android:text="@string/status_clock"
                    android:textColor="@drawable/button_text_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_vertical_margin"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/status_choose_image"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:enabled="false"
                    android:minHeight="@dimen/button_min_height"

                    android:paddingLeft="@dimen/widgets_horizontal_margin"
                    android:paddingRight="@dimen/widgets_horizontal_margin"
                    android:text="@string/status_presentation"
                    android:textColor="@drawable/button_text_color" />

                <Button
                    android:id="@+id/status_clear"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/widgets_horizontal_margin"
                    android:background="@drawable/button_background"
                    android:enabled="false"
                    android:minHeight="@dimen/button_min_height"
                    android:paddingLeft="@dimen/widgets_horizontal_margin"
                    android:paddingRight="@dimen/widgets_horizontal_margin"
                    android:text="@string/status_clear"
                    android:textColor="@drawable/button_text_color" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>